--- a/common.html
+++ b/common.html
@@ -15,8 +15,8 @@
             <!-- <a href="#"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a> -->
             <!-- <a href="#"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a> -->
             <nav>
-                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png"></a>
-                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png"></a>
+                <a href="index.html"><img class="small-logo" src="DJ_Turntable_LOGO_1.png" alt="DJ Turntable Logo"></a>
+                <a href="index.html"><img class="logo" src="DJ_Turntable_LOGO_3.png" alt="DJ Turntable Logo"></a>
                 <br>
                 <a href="#" class="placeholder">LO</a>
                 <!-- <input type="checkbox" id="menu-bar">
@@ -53,6 +53,7 @@
             <div class="spacer-area">
                 <span>placeholder</span>
             </div>
+            
             <footer>
                 <p>©2023. DJ Turntable, Inc. All Rights Reserved</p>
                 <p>1 Quiet Valley Lane, Sepulveda CA 91343</p>
