--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                 </div>
                 
                 <div class="DJ">
-                    <h3>Meet The DJ</h3>
+                    <a href="story.html" class="green"><h3>Meet The DJ</h3></a>
                     <p>Dylan jackson has a passion for music and loves sharing it with great people. Read his story and get to know DJ Turntable...</p>
                 </div>
                 <div class="services">
-                    <h3>Event Services</h3>
+                    <a href="events.html" class="green"><h3>Event Services</h3></a>
                     <p>DJ Turntable has loads of experience playing for all types of audiances at all kinds of celebrations. See how much fun you can have...</p>
                 </div>
                 <div class="reviews">
-                    <h3>Rave Reviews</h3>
+                    <a href="reviews.html" class="green"><h3>Rave Reviews</h3></a>
                     <p><b>We're not bragging, but our clients are! Here's the beat on the street...</b>"Our students were thrilled, and even the teachers enjoyed the evening!"</p>
 
                 </div>
