--- a/story.html
+++ b/story.html
@@ -67,6 +67,7 @@
             </div>
             <main>
                 <article>
+                        <h2> My Story</h2>
                         <p>I grew up in a very musical family. My father played saxophone with a "band of buddies" from his college days, and he is now the local high school band teacher. My mother is the singer in the family, and she is a regular lead performer in musicals with our community theater.
                             Needless to say, my three siblings and I all took music lessons. But even though I was the one who never could settle on a favorite instrumrnt, I'm the only one who went into the music business!
                             Early on, music became my thing. I could name any song on the radio and tell you not only who was singing it, but who wrote it and when. At my senior prom, I was at the turntable more than I was on the dance floor.
