--- a/reviews.html
+++ b/reviews.html
@@ -48,6 +48,7 @@
                         <li><a href="contact.html">contact</a></li>
                     </ul>
             </div>
+            <script src="intersection.js"></script>
             <script src="main.js"></script>
             </nav>
             <div class="spacer-area">
